<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_ControllerCoeList" Id="{07592a42-9fc5-0eb9-1f52-2c09efd9255d}">
    <Declaration><![CDATA[// Contains CoE indexes and sub indexes for Bronkhorst EtherCAT mass flow controller
TYPE ST_ControllerCoeList :
STRUCT
	GasType			: ZigasLibs_Core.ST_CoeEntry_STRING := (Index :=0, SubIndex := 0);
	FlowCapacity	: ZigasLibs_Core.ST_CoeEntry_REAL := (Index :=0, SubIndex := 0);
	FlowUnit		: ZigasLibs_Core.ST_CoeEntry_STRING := (Index :=0, SubIndex := 0);
	DecimalDigits	: ZigasLibs_Core.ST_CoeEntry_INT := (Index :=0, SubIndex := 0);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>