<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_ControllerOutputs" Id="{0b614c66-472e-01b9-3bfd-ff629dee63c3}">
    <Declaration><![CDATA[TYPE ST_ControllerOutputs :
STRUCT
	ControlByte	: BYTE;
	Setpoint	: INT;
	ControlMode	: USINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>